--- a/package.json
+++ b/package.json
@@ -28,9 +28,12 @@
     "@types/bluebird": "^3.5.37",
     "@types/lodash": "^4.14.186",
     "@types/serverless": "^3.12.8",
+    "@typescript-eslint/eslint-plugin": "^5.41.0",
+    "@typescript-eslint/parser": "^5.41.0",
     "coveralls": "^3.1.1",
     "eslint": "^7.32.0",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "git-list-updated": "^1.2.1",
     "github-release-from-cc-changelog": "^2.3.0",
     "husky": "^4.3.8",
@@ -38,13 +41,14 @@
     "lint-staged": "^10.5.4",
     "prettier": "^2.6.2",
     "sinon": "^8.1.1",
-    "standard-version": "^9.3.2"
+    "standard-version": "^9.3.2",
+    "typescript": "4.4.4"
   },
   "peerDependencies": {
     "serverless": "2 || 3"
   },
   "scripts": {
-    "lint": "eslint ./src --ext .js,.ts",
+    "lint": "eslint . --ext .js,.ts",
     "format": "prettier --write .",
     "type-check": "tsc --noEmit",
     "commitlint": "commitlint -f HEAD@{15}",
