--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
   "devDependencies": {
     "@commitlint/cli": "^9.1.2",
     "@serverless/eslint-config": "^2.2.0",
+    "@types/async": "^3.2.15",
     "@types/bluebird": "^3.5.37",
+    "@types/express": "^4.17.14",
+    "@types/fs-extra": "^9.0.13",
     "@types/lodash": "^4.14.186",
     "@types/serverless": "^3.12.8",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
@@ -42,7 +45,8 @@
     "prettier": "^2.6.2",
     "sinon": "^8.1.1",
     "standard-version": "^9.3.2",
-    "typescript": "4.4.4"
+    "ts-migrate": "^0.1.34",
+    "typescript": "^4.4.4"
   },
   "peerDependencies": {
     "serverless": "2 || 3"
