--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "4.6.0",
   "description": "Provider plugin for the Serverless Framework that adds support for Google Cloud Functions.",
   "homepage": "https://github.com/serverless/serverless-google-cloudfunctions",
+  "main": "./dist/index.js",
+  "files": [
+    "dist"
+  ],
   "keywords": [
     "serverless",
     "serverless framework",
@@ -29,6 +33,7 @@
     "@types/bluebird": "^3.5.37",
     "@types/express": "^4.17.14",
     "@types/fs-extra": "^9.0.13",
+    "@types/jest": "^29.2.0",
     "@types/lodash": "^4.14.186",
     "@types/serverless": "^3.12.8",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
@@ -40,11 +45,12 @@
     "git-list-updated": "^1.2.1",
     "github-release-from-cc-changelog": "^2.3.0",
     "husky": "^4.3.8",
-    "jest": "^25.5.4",
+    "jest": "^29.2.2",
     "lint-staged": "^10.5.4",
     "prettier": "^2.6.2",
     "sinon": "^8.1.1",
     "standard-version": "^9.3.2",
+    "ts-jest": "^29.0.3",
     "ts-migrate": "^0.1.34",
     "typescript": "^4.4.4"
   },
@@ -55,16 +61,9 @@
     "lint": "eslint . --ext .js,.ts",
     "format": "prettier --write .",
     "type-check": "tsc --noEmit",
-    "commitlint": "commitlint -f HEAD@{15}",
-    "commitlint:pull-request": "commitlint -f HEAD~1",
-    "coverage": "jest --coverage",
-    "lint:updated": "pipe-git-updated --ext=js -- eslint --cache",
-    "prepare-release": "standard-version && prettier --write CHANGELOG.md",
-    "prettier-check": "prettier -c --ignore-path .gitignore \"**/*.{css,html,js,json,md,yaml,yml}\"",
-    "prettier-check:updated": "pipe-git-updated --ext=css --ext=html --ext=js --ext=json --ext=md --ext=yaml --ext=yml -- prettier -c",
-    "prettify": "prettier --write --ignore-path .gitignore \"**/*.{css,html,js,json,md,yaml,yml}\"",
-    "prettify:updated": "pipe-git-updated --ext=css --ext=html --ext=js --ext=json --ext=md --ext=yaml --ext=yml -- prettier --write",
-    "test": "jest"
+    "test": "jest",
+    "test:coverage": "jest --coverage",
+    "build": "tsc"
   },
   "engines": {
     "node": ">=10.0"
