--- a/package.json
+++ b/package.json
@@ -1,9 +1,17 @@
 {
   "name": "@caldwell/serverless-google-cloud",
-  "version": "4.6.0",
+  "version": "0.0.1",
   "description": "Provider plugin for the Serverless Framework that adds support for Google Cloud Functions.",
   "homepage": "https://github.com/serverless/serverless-google-cloudfunctions",
   "main": "./dist/index.js",
+  "scripts": {
+    "lint": "eslint . --ext .js,.ts",
+    "format": "prettier --write .",
+    "type-check": "tsc --noEmit",
+    "test": "jest",
+    "test:coverage": "jest --coverage",
+    "build": "tsc -p tsconfig.build.json"
+  },
   "files": [
     "dist"
   ],
@@ -55,17 +63,7 @@
     "ts-migrate": "^0.1.34",
     "typescript": "^4.4.4"
   },
-  "peerDependencies": {
-    "serverless": "2 || 3"
-  },
-  "scripts": {
-    "lint": "eslint . --ext .js,.ts",
-    "format": "prettier --write .",
-    "type-check": "tsc --noEmit",
-    "test": "jest",
-    "test:coverage": "jest --coverage",
-    "build": "tsc"
-  },
+  "peerDependencies": {},
   "engines": {
     "node": ">=10.0"
   },
