--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "0.0.1",
   "description": "Provider plugin for the Serverless Framework that adds support for Google Cloud Functions.",
   "homepage": "https://github.com/serverless/serverless-google-cloudfunctions",
-  "main": "./dist/index.js",
+  "main": "dist/index.js",
   "scripts": {
     "lint": "eslint . --ext .js,.ts",
     "format": "prettier --write .",
     "type-check": "tsc --noEmit",
     "test": "jest",
     "test:coverage": "jest --coverage",
-    "build": "tsc -p tsconfig.build.json"
+    "build": "sh scripts/build.sh"
   },
   "files": [
     "dist"
@@ -56,10 +56,13 @@
     "jest": "^29.2.2",
     "lint-staged": "^10.5.4",
     "prettier": "^2.6.2",
+    "serverless": "^3.24.1",
     "sinon": "^8.1.1",
     "standard-version": "^9.3.2",
     "ts-jest": "^29.0.3",
     "ts-migrate": "^0.1.34",
+    "ts-node": "^10.9.1",
+    "tscpaths": "^0.0.9",
     "typescript": "^4.4.4"
   },
   "peerDependencies": {},
