--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "module": "commonjs",
     "target": "es2019",
     "skipLibCheck": true,
-    "outDir": "example/dist",
+    "outDir": "dist",
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "rootDirs": ["e2e"],
